--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fruittables - vegetable website </title>
 </head>
 <body>
     
+
+    <div class="index">
+
+    </div>
+
 </body>
 </html>
