--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 
+    <link rel="stylesheet" href="./css/ktstyle.css">
     <style>
         * {
             margin: 3%;
@@ -32,13 +33,6 @@
             border: 1px solid rgb(255, 255, 255);
             position: absolute
             
-        }
-
-
-
-        .navigation {
-            border: 1px solid rgb(255, 255, 255);
-            top: 100%;
         }
 
         .box>h1 {
@@ -247,7 +241,53 @@
 
 
 <body>
+    <div class="navigation">
+        <div class="head">
+            <div>
+                🌐 123 Street, New York &nbsp&nbsp&nbsp
+                💌 Email@Example.com
+            </div>
+            <div>
+                Privacy Policy / Terms of Use / Sales and Refunds
+            </div>
+        </div> <!--head-->
         
+        <div class="head-sec">
+            <h1 style="color: green;">Fruitables</h1>
+            <div class="content">
+                <a href="./index.html ">Home</a> &nbsp;&nbsp;&nbsp;
+                <a href="./01_shop.html">Shop</a> &nbsp;&nbsp;&nbsp;
+                <a href="">Shop Detail</a> &nbsp;&nbsp;&nbsp;
+                <div class="dropdown">
+                    <span class="dropbtn">drop down</span>
+                    <div class="dropdown-content">
+                    <a href="#">Cart</a>
+                    <a href="#">Chekout</a>
+                    <a href="#">Testimonial</a>
+                    </div>
+                </div>  &nbsp;&nbsp;&nbsp;
+                <a href="./contact.html">Contact</a>
+            </div> <!-- content -->
+            <div class="button1">
+                <button>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                    </svg>
+                </button>
+                <button>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                    </svg>
+                </button>
+                <button>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                    </svg>
+                </button>
+            </div> <!-- button1 -->
+        </div> <!-- head-sec -->
+    </div> <!--navigation-->
 
         <div class="header">
             <img src="./images/wooden-delight-ripe-peaches-with-leaves-fresh-background_892776-21195.jpg" alt="">
