--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
         <div class="head-sec">
             <h1 style="color: green;">Fruitables</h1>
             <div class="content">
-                <a href="http://127.0.0.1:5500/index.html   ">Home</a> &nbsp;&nbsp;&nbsp;
-                <a href="http://127.0.0.1:5500/01_shop.html">Shop</a> &nbsp;&nbsp;&nbsp;
+                <a href="./index.html ">Home</a> &nbsp;&nbsp;&nbsp;
+                <a href="./01_shop.html">Shop</a> &nbsp;&nbsp;&nbsp;
                 <a href="">Shop Detail</a> &nbsp;&nbsp;&nbsp;
                 <div class="dropdown">
                     <span class="dropbtn">drop down</span>
@@ -234,7 +234,7 @@
                     <a href="#">Testimonial</a>
                     </div>
                 </div>  &nbsp;&nbsp;&nbsp;
-                <a href="">Contact</a>
+                <a href="./contact.html">Contact</a>
             </div> <!-- content -->
             <div class="button1">
                 <button>
