--- a/shop.html
+++ b/shop.html
@@ -321,7 +321,7 @@
             <h1 style="color: green;">Fruitables</h1>
             <div class="content">
                 <a href="./index.html">Home</a> &nbsp;&nbsp;&nbsp;
-                <a href="./01_shop.html">Shop</a> &nbsp;&nbsp;&nbsp;
+                <a href="./shop.html">Shop</a> &nbsp;&nbsp;&nbsp;
                 <a href="">Shop Detail</a> &nbsp;&nbsp;&nbsp;
                 <div class="dropdown">
                     <span class="dropbtn">Pages</span>
